Correcting alignment of checkbox

--- a/src/App.css
+++ b/src/App.css
@@ -240,6 +240,10 @@ body{
     margin-bottom: 10px;
     padding: 0px;
   }
+
+  .recaptcha{
+    margin-top: 0px;
+  }
 }
 
 /* .one{
